@startuml

title __PROFILE's Class Diagram__\n

  package no.nordicsemi.android.blinky {
    package no.nordicsemi.android.blinky.profile {
      class BlinkyManager {
          {static} + LBS_UUID_SERVICE : UUID
          {static} - LBS_UUID_BUTTON_CHAR : UUID
          {static} - LBS_UUID_LED_CHAR : UUID
          - mButtonCharacteristic : BluetoothGattCharacteristic
          - mLedCharacteristic : BluetoothGattCharacteristic
          - mLogSession : LogSession
          - mSupported : boolean
          - mLedOn : boolean
          - mGattCallback : BleManagerGattCallback
          + BlinkyManager()
          # getGattCallback()
          + setLogger()
          + log()
          # shouldClearCacheWhenDisconnected()
          + send()
      }
    }
  }
  

  package no.nordicsemi.android.blinky {
    package no.nordicsemi.android.blinky.profile {
      interface BlinkyManagerCallbacks {
      }
    }
  }
  

  BlinkyManager -up-|> BleManager
  BlinkyManager o-- BlinkyButtonDataCallback : mButtonCallback
  BlinkyManager o-- BlinkyLedDataCallback : mLedCallback
  BleManagerGattCallback -up-|> MainThreadBluetoothGattCallback


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
